--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,25 @@
 * {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    
+}
+
+:root {
+    --navy: #141a36;
+    --cream: #fffaed;
+}
+
+body{
+    display:flex;
+    flex-direction: column;
+    line-height: 1.3;
+    background-color: var(--cream);
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1%;
+    background-color: var(--navy);
+    color: var(--cream);
+
 }
