--- a/assets/style.css
+++ b/assets/style.css
@@ -3,8 +3,11 @@
 }
 
 :root {
-    --navy: #141a36;
+    --navy: #161f46;
     --cream: #fffaed;
+    --red: #f4394f;
+    --yellow: #f5d329;
+    --highlight: #62def7;
 }
 
 body{
@@ -31,4 +34,14 @@ nav ul li{
     padding: 15px;
     font-size: 115%;
 
+}
+
+main {
+    margin: 5%;
+    /*border: 10px var(--red) solid; */
+    section {
+        padding: 20px;
+        border-left: 10px var(--red) solid;
+        border-radius: 15px;
+    }
 }
