added another section in html, added more code to section and main css

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,11 +37,12 @@ nav ul li{
 }
 
 main {
-    margin: 5%;
+    margin: 5% 10%;
     /*border: 10px var(--red) solid; */
     section {
         padding: 20px;
         border-left: 10px var(--red) solid;
         border-radius: 15px;
+        margin-bottom: 10%;
     }
 }
