--- a/assets/style.css
+++ b/assets/style.css
@@ -3,10 +3,10 @@
 }
 
 :root {
-    --navy: #161f46;
+    --navy: #0f1534;
     --cream: #fffdf7;
     --red: #f4394f;
-    --yellow: #f5d329;
+    --yellow: #fedb15;
     --highlight: #62def7;
 }
 
@@ -33,29 +33,42 @@ nav ul li{
     display: inline-block;
     padding: 15px;
     font-size: 115%;
+    text-decoration: 3px underline var(--highlight);
 
 }
 
 main {
     margin: 5% 10%;
     /*border: 10px var(--red) solid; */
+    color: var(--navy);
     section {
         padding: 20px;
         border-left: 10px var(--red) solid;
         border-radius: 15px;
         margin-bottom: 10%; 
+        line-height: 25px;
+        }
+    }
+    img {
+        float: left;
+        /* losing my mind 
+        Pick a proper image size next time, bozo. */            max-width: 20%;
+        height: 200px;
+        width: 150px;
+        min-width: 150px;
+        padding: 40px;
+        border: 3px #f4394f solid;
+        margin: 20px;
+        
+        border-left: 10px var(--red) solid;
+        border-radius: 15px;
+        } 
     }
     p {
         line-height: 25px;
     }
-    img {
-        /* losing my mind 
-        Pick a proper image size next time, bozo. */
-        max-width: 20%;
-        height: 200px;
-        padding: 10px;
-        border: 3px #f4394f solid;
-        margin: 20px;
-        float: left;
+    h2 {
+        font-size: 120%;
+        text-decoration: 3px underline var(--navy);
     }
 }
