--- a/assets/style.css
+++ b/assets/style.css
@@ -33,8 +33,30 @@ nav ul li{
     display: inline-block;
     padding: 15px;
     font-size: 115%;
-    text-decoration: 3px underline var(--highlight);
+    /* text-decoration: 3px underline var(--highlight); */
+}
 
+.underline-hover {
+    display: inline-block;
+    padding-bottom: 3px;
+    position: relative;
+}
+
+.underline-hover::before {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 0;
+    height: 2px;
+    background-color: var(--highlight);
+    transition: width 0.25s ease-out;
+}
+
+.underline-hover:hover::before {
+    width: 92%;
+    left: 0;
+    right: auto;
 }
 
 main {
@@ -47,8 +69,8 @@ main {
         border-radius: 15px;
         margin-bottom: 10%; 
         line-height: 25px;
-        }
     }
+
     img {
         float: left;
         /* losing my mind 
@@ -59,14 +81,12 @@ main {
         padding: 40px;
         border: 3px #f4394f solid;
         margin: 20px;
-        
-        border-left: 10px var(--red) solid;
-        border-radius: 15px;
-        } 
     }
+
     p {
         line-height: 25px;
     }
+
     h2 {
         font-size: 120%;
         text-decoration: 3px underline var(--navy);
