--- a/assets/style.css
+++ b/assets/style.css
@@ -33,7 +33,6 @@ nav ul li{
     display: inline-block;
     padding: 15px;
     font-size: 115%;
-    /* text-decoration: 3px underline var(--highlight); */
 }
 
 .underline-hover {
@@ -63,6 +62,8 @@ main {
     margin: 5% 10%;
     /*border: 10px var(--red) solid; */
     color: var(--navy);
+    position: relative;
+
     section {
         padding: 20px;
         border-left: 10px var(--red) solid;
@@ -72,15 +73,15 @@ main {
     }
 
     img {
-        float: left;
+        position:relative;
         /* losing my mind 
         Pick a proper image size next time, bozo. */            max-width: 20%;
         height: 200px;
         width: 150px;
         min-width: 150px;
-        padding: 40px;
+        padding:0;
         border: 3px #f4394f solid;
-        margin: 20px;
+        margin: 10px;
     }
 
     p {
