--- a/assets/reset.css
+++ b/assets/reset.css
@@ -24,6 +24,11 @@
     font-family: inherit;
   }
   
-  ol, ul {
+
+  ol {
     list-style: none;
+  }
+
+  ul {
+    list-style-type: square;
   }
